--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1081,46 +1081,102 @@ background_tint 0.0
 # selection_foreground #000000
 # selection_background #fffacd
 
-# Tokyo Night color scheme for kitty terminal emulator
-# https://github.com/davidmathers/tokyo-night-kitty-theme
+## name: Rosé Pine
+## author: mvllow
+## license: MIT
+## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine.conf
+## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+
+foreground               #e0def4
+background               #191724
+selection_foreground     #e0def4
+selection_background     #403d52
+
+cursor                   #524f67
+cursor_text_color        #e0def4
+
+url_color                #c4a7e7
+
+active_tab_foreground    #e0def4
+active_tab_background    #26233a
+inactive_tab_foreground  #6e6a86
+inactive_tab_background  #191724
+
+active_border_color      #31748f
+inactive_border_color    #403d52
+
+# black
+color0   #26233a
+color8   #6e6a86
+
+# red
+color1   #eb6f92
+color9   #eb6f92
+
+# green
+color2   #31748f
+color10  #31748f
+
+# yellow
+color3   #f6c177
+color11  #f6c177
+
+# blue
+color4   #9ccfd8
+color12  #9ccfd8
+
+# magenta
+color5   #c4a7e7
+color13  #c4a7e7
+
+# cyan
+color6   #ebbcba
+color14  #ebbcba
+
+# white
+color7   #e0def4
+color15  #e0def4
+
+# # Tokyo Night color scheme for kitty terminal emulator
+# # https://github.com/davidmathers/tokyo-night-kitty-theme
+# #
+# # Based on Tokyo Night color theme for Visual Studio Code
+# # https://github.com/enkia/tokyo-night-vscode-theme
 #
-# Based on Tokyo Night color theme for Visual Studio Code
-# https://github.com/enkia/tokyo-night-vscode-theme
-
-foreground #a9b1d6
-background #1a1b26
-
-# Black
-color0 #414868
-color8 #414868
-
-# Red
-color1 #f7768e
-color9 #f7768e
-
-# Green
-color2  #73daca
-color10 #73daca
-
-# Yellow
-color3  #e0af68
-color11 #e0af68
-
-# Blue
-color4  #7aa2f7
-color12 #7aa2f7
-
-# Magenta
-color5  #bb9af7
-color13 #bb9af7
-
-# Cyan
-color6  #7dcfff
-color14 #7dcfff
-
-# White
-color7  #c0caf5
-color15 #c0caf5
+# foreground #a9b1d6
+# background #1a1b26
+#
+# # Black
+# color0 #414868
+# color8 #414868
+#
+# # Red
+# color1 #f7768e
+# color9 #f7768e
+#
+# # Green
+# color2  #73daca
+# color10 #73daca
+#
+# # Yellow
+# color3  #e0af68
+# color11 #e0af68
+#
+# # Blue
+# color4  #7aa2f7
+# color12 #7aa2f7
+#
+# # Magenta
+# color5  #bb9af7
+# color13 #bb9af7
+#
+# # Cyan
+# color6  #7dcfff
+# color14 #7dcfff
+#
+# # White
+# color7  #c0caf5
+# color15 #c0caf5
 
 # Cursor
 cursor #c0caf5
