--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1141,51 +1141,51 @@ background_tint 0.0
 # This work is licensed under the terms of the MIT license.
 # For a copy, see https://opensource.org/licenses/MIT.
 
-background  #161b22
-foreground  #ebdbb2
-
-cursor                #928374
-
-selection_foreground  #928374
-selection_background  #3c3836
-
-color0  #282828
-color8  #928374
-
-# red
-color1                #cc241d
-# light red
-color9                #fb4934
-
-# green
-color2                #98971a
-# light green
-color10               #b8bb26
-
-# yellow
-color3                #d79921
-# light yellow
-color11               #fabd2d
-
-# blue
-color4                #458588
-# light blue
-color12               #83a598
-
-# magenta
-color5                #b16286
-# light magenta
-color13               #d3869b
-
-# cyan
-color6                #689d6a
-# lighy cyan
-color14               #8ec07c
-
-# light gray
-color7                #a89984
-# dark gray
-color15               #928374
+# background  #161b22
+# foreground  #ebdbb2
+#
+# cursor                #928374
+#
+# selection_foreground  #928374
+# selection_background  #3c3836
+#
+# color0  #282828
+# color8  #928374
+#
+# # red
+# color1                #cc241d
+# # light red
+# color9                #fb4934
+#
+# # green
+# color2                #98971a
+# # light green
+# color10               #b8bb26
+#
+# # yellow
+# color3                #d79921
+# # light yellow
+# color11               #fabd2d
+#
+# # blue
+# color4                #458588
+# # light blue
+# color12               #83a598
+#
+# # magenta
+# color5                #b16286
+# # light magenta
+# color13               #d3869b
+#
+# # cyan
+# color6                #689d6a
+# # lighy cyan
+# color14               #8ec07c
+#
+# # light gray
+# color7                #a89984
+# # dark gray
+# color15               #928374
 
 # # Tokyo Night color scheme for kitty terminal emulator
 # # https://github.com/davidmathers/tokyo-night-kitty-theme
@@ -1227,6 +1227,55 @@ color15               #928374
 # # White
 # color7  #c0caf5
 # color15 #c0caf5
+
+foreground #dde1e6
+background #161616
+selection_foreground #f2f4f8
+selection_background #525252
+
+cursor #f2f4f8
+cursor_text_color #393939
+
+url_color #ee5396
+url_style single
+
+active_border_color #ee5396
+inactive_border_color #ff7eb6
+
+bell_border_color #ee5396
+
+wayland_titlebar_color system
+macos_titlebar_color system
+
+active_tab_foreground #161616
+active_tab_background #ee5396
+inactive_tab_foreground #dde1e6
+inactive_tab_background #393939
+tab_bar_background #161616
+
+color0 #262626
+color8 #393939
+
+color1 #ff7eb6
+color9 #ff7eb6
+
+color2  #42be65
+color10 #42be65
+
+color3  #82cfff
+color11 #82cfff
+
+color4  #33b1ff
+color12 #33b1ff
+
+color5  #ee5396
+color13 #ee5396
+
+color6  #3ddbd9
+color14 #3ddbd9
+
+color7  #dde1e6
+color15 #ffffff
 
 # Cursor
 cursor #c0caf5
