--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1016,7 +1016,7 @@ hide_window_decorations titlebar-only
 
 #: The foreground and background colors.
 
-background_opacity .96
+# background_opacity .96
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1137,6 +1137,63 @@ background_tint 0.0
 # color7   #e0def4
 # color15  #e0def4
 #
+
+# ## name: Rosé Pine Moon
+# ## author: mvllow
+# ## license: MIT
+# ## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-moon.conf
+# ## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+#
+# foreground               #e0def4
+# background               #232136
+# selection_foreground     #e0def4
+# selection_background     #44415a
+#
+# cursor                   #56526e
+# cursor_text_color        #e0def4
+#
+# url_color                #c4a7e7
+#
+# active_tab_foreground    #e0def4
+# active_tab_background    #393552
+# inactive_tab_foreground  #6e6a86
+# inactive_tab_background  #232136
+#
+# active_border_color      #3e8fb0
+# inactive_border_color    #44415a
+#
+# # black
+# color0   #393552
+# color8   #6e6a86
+#
+# # red
+# color1   #eb6f92
+# color9   #eb6f92
+#
+# # green
+# color2   #3e8fb0
+# color10  #3e8fb0
+#
+# # yellow
+# color3   #f6c177
+# color11  #f6c177
+#
+# # blue
+# color4   #9ccfd8
+# color12  #9ccfd8
+#
+# # magenta
+# color5   #c4a7e7
+# color13  #c4a7e7
+#
+# # cyan
+# color6   #ea9a97
+# color14  #ea9a97
+#
+# # white
+# color7   #e0def4
+# color15  #e0def4
+
 # gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
 # This work is licensed under the terms of the MIT license.
 # For a copy, see https://opensource.org/licenses/MIT.
@@ -1227,66 +1284,136 @@ background_tint 0.0
 # # White
 # color7  #c0caf5
 # color15 #c0caf5
+#
+## name: Kanagawa
+## author: Tommaso Laurenzi
+## license: MIT
+## upstream: https://github.com/rebelot/kanagawa.nvim/
+## blurb: NeoVim dark colorscheme inspired by the colors of the famous painting
+## by Katsushika Hokusai.
 
-foreground #dde1e6
-background #161616
-selection_foreground #f2f4f8
-selection_background #525252
+#: The basic colors
 
-cursor #f2f4f8
-cursor_text_color #393939
+foreground                      #dcd7ba
+background                      #1f1f28
+selection_foreground            #c8c093
+selection_background            #2d4f67
 
-url_color #ee5396
-url_style single
+#: Cursor colors
 
-active_border_color #ee5396
-inactive_border_color #ff7eb6
+cursor                          #c8c093
 
-bell_border_color #ee5396
+#: URL underline color when overing with mouse
 
-wayland_titlebar_color system
-macos_titlebar_color system
+url_color                       #72a7bc
 
-active_tab_foreground #161616
-active_tab_background #ee5396
-inactive_tab_foreground #dde1e6
-inactive_tab_background #393939
-tab_bar_background #161616
+#: Tab bar colors
 
-color0 #262626
-color8 #393939
+active_tab_foreground           #c8c093
+active_tab_background           #1f1f28
+inactive_tab_foreground         #727169
+inactive_tab_background         #1f1f28
 
-color1 #ff7eb6
-color9 #ff7eb6
+#: The basic 16 colors
 
-color2  #42be65
-color10 #42be65
+#: black
+color0  #16161d
+color8  #727169
 
-color3  #82cfff
-color11 #82cfff
+#: red
+color1  #c34043
+color9  #e82424
 
-color4  #33b1ff
-color12 #33b1ff
+#: green
+color2  #76946a
+color10 #98bb6c
 
-color5  #ee5396
-color13 #ee5396
+#: yellow
+color3  #c0a36e
+color11 #e6c384
 
-color6  #3ddbd9
-color14 #3ddbd9
+#: blue
+color4  #7e9cd8
+color12 #7fb4ca
 
-color7  #dde1e6
-color15 #ffffff
+#: magenta
+color5  #957fb8
+color13 #938aa9
 
-# Cursor
-cursor #c0caf5
-cursor_text_color #1a1b26
+#: cyan
+color6  #6a9589
+color14 #7aa89f
 
-# Selection highlight
-selection_foreground none
-selection_background #28344a
+#: white
+color7  #c8c093
+color15 #dcd7ba
 
-# The color for highlighting URLs on mouse-over
-url_color #9ece6a
+
+#: You can set the remaining 240 colors as color16 to color255.
+
+color16 #ffa066
+color17 #ff5d62
+
+# # Oxocarbon
+# foreground #dde1e6
+# background #161616
+# selection_foreground #f2f4f8
+# selection_background #525252
+#
+# cursor #f2f4f8
+# cursor_text_color #393939
+#
+# url_color #ee5396
+# url_style single
+#
+# active_border_color #ee5396
+# inactive_border_color #ff7eb6
+#
+# bell_border_color #ee5396
+#
+# wayland_titlebar_color system
+# macos_titlebar_color system
+#
+# active_tab_foreground #161616
+# active_tab_background #ee5396
+# inactive_tab_foreground #dde1e6
+# inactive_tab_background #393939
+# tab_bar_background #161616
+#
+# color0 #262626
+# color8 #393939
+#
+# color1 #ff7eb6
+# color9 #ff7eb6
+#
+# color2  #42be65
+# color10 #42be65
+#
+# color3  #82cfff
+# color11 #82cfff
+#
+# color4  #33b1ff
+# color12 #33b1ff
+#
+# color5  #ee5396
+# color13 #ee5396
+#
+# color6  #3ddbd9
+# color14 #3ddbd9
+#
+# color7  #dde1e6
+# color15 #ffffff
+#
+# # Cursor
+# cursor #c0caf5
+# cursor_text_color #1a1b26
+#
+# # Selection highlight
+# selection_foreground none
+# selection_background #28344a
+#
+# # The color for highlighting URLs on mouse-over
+# url_color #9ece6a
 
 # Window borders
 active_border_color #3d59a1
